--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   es:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
-    container_name: es
+    container_name: mogaktae-elastic-search
     environment:
       - node.name=single-node
       - cluster.name=xunxxoie
@@ -14,7 +14,7 @@ services:
       - es-bridge
 
   kibana:
-    container_name: kibana
+    container_name: mogaktae-kibana
     image: docker.elastic.co/kibana/kibana:8.5.3
     environment:
       SERVER_NAME: kibana
