--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,23 @@
 services:
+  spring:
+    container_name: mogaktae-server
+    image: ${DOCKER_HUB_USERNAME}/mogaktae-server:latest
+    ports:
+      - "8070:8080"
+    depends_on:
+      - redis
+      - es
+    environment:
+      - TZ=Asia/Seoul
+    networks:
+      - es-bridge
+
   es:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
-    container_name: mogaktae-elastic-search
+    container_name: mogaktae-elasticsearch
     environment:
-      - node.name=single-node
-      - cluster.name=xunxxoie
+      - node.name=mogaktae-node
+      - cluster.name=mogaktae-cluster
       - discovery.type=single-node
       - xpack.security.enabled=false
     ports:
@@ -29,9 +42,7 @@ services:
   redis:
     image: redis:latest
     container_name: mogaktae-redis
-    command: redis-server --requirepass sider-eatkagom
-    environment:
-      - REDIS_PASSWORD=sider-eatkagom
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     ports:
       - 6379:6379
     networks:
