--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,1 +1,96 @@
+name: mogaktae CICD
 
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    name: build jar file & push at Docker Hub
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: set up application-prod.yml
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: ./src/main/resources/application-prod.yml
+        env:
+          spring.datasource.url: ${{secrets.MYSQL_URL}}
+          spring.datasource.username: ${{secrets.MYSQL_USERNAME}}
+          spring.datasource.password: ${{secrets.MYSQL_PASSWORD}}
+
+          spring.data.redis.host: ${{secrets.REDIS_HOST}}
+          spring.data.redis.password: ${{secrets.REDIS_PASSWORD}}
+
+          spring.security.jwt.access-token.expired-time: ${{secrets.ACCESS_TOKEN_EXPIRED_TIME}}
+          spring.security.jwt.refresh-token.expired-time: ${{secrets.REFRESH_TOKEN_EXPIRED_TIME}}
+          spring.security.jwt.secret: ${{secrets.JWT_SECRET}}
+
+          spring.security.oauth2.client.registration.github.client-id: ${{secrets.GIT_CLIENT_ID}}
+          spring.security.oauth2.client.registration.github.client-secret: ${{secrets.GIT_CLIENT_SECRET}}
+
+      - name: build with gradle
+        run: |
+          chmod +x ./gradlew
+          ./gradlew clean build -x test -i --no-daemon -Dspring.profiles.active=prod
+
+      - name: login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKER_HUB_USERNAME}}
+          password: ${{secrets.DOCKER_HUB_PASSWORD}}
+
+      - name: build Docker image
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/mogaktae-server:latest .
+
+      - name: push Docker image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/mogaktae-server:latest
+
+  deploy:
+    name: deploy to server
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+
+      - name: copy docker-compose.yml to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{secrets.APPCENTER_SERVER_IP}}
+          username: ${{secrets.APPCENTER_SERVER_USERNAME}}
+          password: ${{secrets.APPCENTER_SERVER_PASSWORD}}
+          port: ${{secrets.APPCENTER_SERVER_PORT}}
+          source: "docker-compose.yml"
+          target: "/home/serverking/mogaktae"
+
+      - name: deploy to server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{secrets.APPCENTER_SERVER_IP}}
+          username: ${{secrets.APPCENTER_SERVER_USERNAME}}
+          password: ${{secrets.APPCENTER_SERVER_PASSWORD}}
+          port: ${{secrets.APPCENTER_SERVER_PORT}}
+          script: |
+            cd /home/serverking/mogaktae
+
+            echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" > .env
+            echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" >> .env
+
+            docker-compose down
+
+            docker-compose pull
+            docker-compose up -d
+
+            docker image prune -f
