[Fix] 앨라스틱서치 호스트 도메인 변경

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -25,10 +25,10 @@ spring:
     elasticsearch:
       repositories:
         enabled: true
-      uris: http://es:9200
+
 
     redis:
-      host: redis
+      host: mogaktae-redis
       port: 6384
       password: ${REDIS_PASSWORD}
 
