--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   es:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
-    container_name: mogaktae-elasticsearch
+    container_name: es
     environment:
       - node.name=mogaktae-node
       - cluster.name=mogaktae-cluster
