--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -50,3 +50,10 @@ logging:
   level:
     root: INFO
     org.springframework.security: DEBUG
+
+sentry:
+  dsn: "${SENTRY_DSN}"
+  exception-resolver-order: -2147483647
+  max-request-body-size: always
+  send-default-pii: true
+  traces-sample-rate: 1.0
