[Fix] 워크플로우파일 오탈자 수정 - #11

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -39,7 +39,7 @@ jobs:
           spring.security.oauth2.client.registration.github.client-id: ${{secrets.GIT_CLIENT_ID}}
           spring.security.oauth2.client.registration.github.client-secret: ${{secrets.GIT_CLIENT_SECRET}}
 
-          sentry.dsn: ${{SENTRY_DSN}}
+          sentry.dsn: ${{secrets.SENTRY_DSN}}
 
       - name: build with gradle
         run: |
