--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,22 @@ services:
     ports:
       - "8070:8080"
     depends_on:
-      es:
+      js-elastic-search:
         condition: service_healthy
       redis:
         condition: service_started
     environment:
       - TZ=Asia/Seoul
     networks:
-      - es-bridge
+      - js-bridge
     restart: unless-stopped
 
-  es:
+  js-elastic-search:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
-    container_name: mogaktae-elastic-search
+    container_name: js-elastic-search
     environment:
-      - node.name=mogaktae-node
-      - cluster.name=mogaktae-cluster
+      - node.name=js-node
+      - cluster.name=js-cluster
       - discovery.type=single-node
       - xpack.security.enabled=false
     ports:
@@ -33,20 +33,20 @@ services:
       retries: 5
       start_period: 60s
     networks:
-      - es-bridge
+      - js-bridge
 
-  kibana:
-    container_name: mogaktae-kibana
+  js-kibana:
+    container_name: js-kibana
     image: docker.elastic.co/kibana/kibana:8.5.3
     environment:
       SERVER_NAME: kibana
-      ELASTICSEARCH_HOSTS: http://es:9200
+      ELASTICSEARCH_HOSTS: http://js-elastic-search:9200
     ports:
       - 5601:5601
     depends_on:
-      - es
+      - js-elastic-search
     networks:
-      - es-bridge
+      - js-bridge
 
   redis:
     image: redis:latest
@@ -55,8 +55,8 @@ services:
     ports:
       - 6384:6379
     networks:
-      - es-bridge
+      - js-bridge
 
 networks:
-  es-bridge:
+  js-bridge:
     driver: bridge
