[Hotfix] docker container 환경에서 리버스 프록시된 요청 헤더를 신뢰하게 설정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -57,3 +57,6 @@ sentry:
   max-request-body-size: always
   send-default-pii: true
   traces-sample-rate: 1.0
+
+server:
+  forward-headers-strategy: native
