--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -90,9 +90,11 @@ jobs:
             echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" > .env
             echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" >> .env
 
-            docker-compose stop spring
-            docker-compose rm -f spring
+            docker-compose stop spring redis
+            docker-compose rm -f spring redis
+
             docker-compose pull spring
-            docker-compose up -d spring
+
+            docker-compose up -d redis spring
 
             docker image prune -f
