--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,4 +1,4 @@
-name: mogaktae CICD
+name: CI/CD
 
 on:
   push:
@@ -7,20 +7,20 @@ on:
 
 jobs:
   build:
-    name: build jar file & push at Docker Hub
+    name: JAR 빌드 & 도커 허브 푸쉬
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
         uses: actions/checkout@v4
 
-      - name: set up JDK 17
+      - name: JDK 버전 설정
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'adopt'
 
-      - name: set up application-prod.yml
+      - name: application.yml 환경변수 주입
         uses: microsoft/variable-substitution@v1
         with:
           files: ./src/main/resources/application-prod.yml
@@ -41,25 +41,25 @@ jobs:
 
           sentry.dsn: ${{secrets.SENTRY_DSN}}
 
-      - name: build with gradle
+      - name: JAR 빌드
         run: |
           chmod +x ./gradlew
           ./gradlew clean build -x test -i --no-daemon -Dspring.profiles.active=prod
 
-      - name: login to Docker Hub
+      - name: 도커 허브 로그인
         uses: docker/login-action@v3
         with:
           username: ${{secrets.DOCKER_HUB_USERNAME}}
           password: ${{secrets.DOCKER_HUB_PASSWORD}}
 
-      - name: build Docker image
+      - name: 도커 이미지 빌드
         run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/mogaktae-server:latest .
 
-      - name: push Docker image to Docker Hub
+      - name: 도커 이미지 푸쉬
         run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/mogaktae-server:latest
 
   deploy:
-    name: deploy to server
+    name: 앱센터 서버에 배포
     needs: build
     runs-on: ubuntu-latest
 
@@ -67,7 +67,7 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v4
 
-      - name: copy docker-compose.yml to server
+      - name: docker-compose.yml 전송
         uses: appleboy/scp-action@master
         with:
           host: ${{secrets.APPCENTER_SERVER_IP}}
@@ -77,7 +77,7 @@ jobs:
           source: "docker-compose.yml"
           target: "/home/serverking/mogaktae"
 
-      - name: deploy to server
+      - name: 앱센터 서버에 배포
         uses: appleboy/ssh-action@master
         with:
           host: ${{secrets.APPCENTER_SERVER_IP}}
@@ -98,3 +98,5 @@ jobs:
             docker-compose up -d redis spring
 
             docker image prune -f
+            
+            rm -rf .env
