--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,6 +17,7 @@ spring:
         generate_statistics: true
         use_sql_comments: true
     open-in-view: false
+    defer-datasource-initialization: true
 
   data:
     elasticsearch:
